--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
         </div>
 
     </div>
-    <!-- <div class="why-choose-us">
+    <div class="why-choose-us">
         <div>
             <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" class=" contact-blue ">
                 <path fill="#13203C" d="M39.6,-40.8C51.5,-27.7,61.4,-13.8,60.5,-0.9C59.6,12,47.9,24.1,36,29.5C24.1,34.9,12,33.6,-4.2,37.9C-20.5,42.1,-41,51.8,-53.1,46.4C-65.2,41,-68.9,20.5,-66.8,2.1C-64.7,-16.4,-56.9,-32.8,-44.8,-45.9C-32.8,-59,-16.4,-68.9,-1.3,-67.6C13.8,-66.3,27.7,-53.9,39.6,-40.8Z" transform="translate(100 100)" />
             </svg>
-            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" class="hero-gold">
                 <path fill="#FBBB47" d="M39.6,-40.8C51.5,-27.7,61.4,-13.8,60.5,-0.9C59.6,12,47.9,24.1,36,29.5C24.1,34.9,12,33.6,-4.2,37.9C-20.5,42.1,-41,51.8,-53.1,46.4C-65.2,41,-68.9,20.5,-66.8,2.1C-64.7,-16.4,-56.9,-32.8,-44.8,-45.9C-32.8,-59,-16.4,-68.9,-1.3,-67.6C13.8,-66.3,27.7,-53.9,39.6,-40.8Z" transform="translate(100 100)" />
               </svg>
         </div>
-    </div> -->
+    </div>
     <div class="Advanced-statistics">
         <div class="Container-Advanced-statistics">
             <div class="form" data-aos="zoom-in-up" data-aos-duration="1600" data-aos-offset="600">
@@ -169,7 +169,7 @@
         
     </div>
     <div class="contact">
-        <div class="center ">
+        <div class="center " data-aos="zoom-out" data-aos-duration="1500" data-aos-offset="600">
             <h1>Contact us</h1>
             <form method="post">
                 <div class="txt-field">
