changed my contact form to a sign in form

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="Advanced-statistics">
         <div class="Container-Advanced-statistics">
             <div class="form" data-aos="zoom-in-up" data-aos-duration="1600" data-aos-offset="600">
-                <form action="" method="get">
+                <form action="#" method="get">
                     <div class="form-contain">                        
                     <input type="text" placeholder="Enter your email">
                     <button>Get started for free</button>
@@ -105,7 +105,7 @@
     </div>
     <div class="cta">
         <div class="hero-section">
-            <div class="container-hero">
+            <div class="container-hero cta-grid">
                 <div class="hero-image cta-image" data-aos="fade-left" data-aos-duration="1600" data-aos-offset="600">
                     <img src="./images/happy man.png" alt="">
                     <div class="counters">
@@ -116,16 +116,18 @@
                     </div>
                 </div>
                 <div class="hero-text cta-text" data-aos="fade-right" data-aos-duration="1800" data-aos-offset="600">
-                    <h1>
-                        Powerful livestream software - <span> totally free!</span>
-                    </h1>
-                    <p>
-                        Take your streams to the next level with Flixia.
-                    </p>
-                    <div class="hero-button">
-                        <button>
-                            Get started
-                        </button>
+                    <div>
+                        <h1>
+                            Powerful livestream software - <span> totally free!</span>
+                        </h1>
+                        <p>
+                            Take your streams to the next level with Flixia.
+                        </p>
+                        <div class="hero-button">
+                            <button>
+                                Get started
+                            </button>
+                        </div>
                     </div>
                 </div>
                 
@@ -170,7 +172,7 @@
     </div>
     <div class="contact">
         <div class="center " data-aos="zoom-out" data-aos-duration="1500" data-aos-offset="600">
-            <h1>Contact us</h1>
+            <h1>Sign In</h1>
             <form method="post">
                 <div class="txt-field">
                     <input type="text" required>
@@ -205,7 +207,9 @@
         <div class="container-footer">
             <div class="footer-grid-parent">
                 <div class=" footer-logo logo">
+                    <div>
                     <img src="./images/Flixia logo (2).png" alt="" width="100px">
+                    </div>
                 </div>
                 <div class="list onee">
                     <h5>Features</h5>
