--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <label >Password</label>
                 </div>
                 <div class="pass">Forgot password?</div>
-                <input type="submit" value="contact us">
+                <input type="submit" value="Sign In">
                 <div class="signup-link">Not a member?
                     <a href="#">Sign up</a>
                 </div>
