--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
                 <div class="list onee">
                     <h5>Features</h5>
                     <ul>
-                        <li><a href="#">Link Shortening</a></li>
-                        <li><a href="#">Branded Links</a></li>
+                        <li><a href="#">Ways to stream</a></li>
+                        <li><a href="#">Only on Flixia</a></li>
                         <li><a href="#">Analytics</a></li>   
                     </ul>
                 </div>
