--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <img src="./images/happy man.png" alt="">
                     <div class="counters">
                         <div class="one1"><h3>3M+</h3> <br> <p> Happy Customers </p></div>
-                        <div class="two2"><h3>3M+</h3> <br> <p>Happy Customers </p></div>
+                        <div class="two2"><h3>25yrs+</h3> <br> <p>Experience</p></div>
                         <div class="three3"><h3>3M+</h3> <br><p>Happy Customers </p></div>
                         
                     </div>
